--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,17 @@ parserOptions:
     sourceType: module
 
 rules:
+    brace-style:
+        - error
+        - stroustrup
+
     indent:
         - error
         - 4
+
+    no-use-before-define:
+        - off
+
+    import/prefer-default-export:
+        - off
+
