--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "starter.nodejs",
-  "version": "1.5.0",
-  "description": "Starter kit for NodeJS",
+  "name": "@open-community/identity-service",
+  "version": "0.1.0",
+  "description": "OC Identity Service",
   "author": "Abraham TEWA",
   "license": "MIT",
   "homepage": "https://abrahamtewa.github.io/starter.nodejs",
@@ -31,9 +31,15 @@
     "url": "https://github.com/AbrahamTewa/starter.nodejs.git"
   },
   "dependencies": {
+    "base64url": "^3.0.1",
     "better-console": "^1.0.1",
-    "es6-error": "^4.0.0",
-    "yargs": "^12.0.5"
+    "body-parser": "^1.19.0",
+    "crypto-random-string": "^3.0.0",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.5.14",
+    "yargs": "^13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
